# jacobi1d

./: .gitignore  CMakeLists.txt  README.md  func.hpp  jacobi_1d.cpp
